# obs-source-switcher

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in  source-switcher.c  source-switcher.h  source-switcher.rc
.github/workflows/: build.yml
CI/macos/: source-switcher.pkgproj
data/locale/: en-US.ini  pt-BR.ini  sk-SK.ini  zh-CN.ini
